--- a/css/styles.css
+++ b/css/styles.css
@@ -60,9 +60,10 @@ body, html {
   border-radius: 45%;
   padding: 5%;
   margin: 5%;
-  font-size: 180%;
+  font-size: 100%;
 }
 .websites a:hover {
+  transition: 1s;
   background-color: #084177;
   color: #c4fb6d;
 }
